[xs]:feat: add Movie and User class

--- a/README
+++ b/README
@@ -39,3 +39,7 @@ DONE !
 10，还书：还书后，书单中出现这本书
 11，还书成功：还书成功后，提示语：“Thank you for returning the book.”
 12，还书失败：当书不属于这个图书馆或者拼写错误时，还书失败，提示语：“That is not a valid book to return.”
+13，电影菜单：包括名字，年份，导演和电影评级（1-10或者未评级）
+14，租借电影：可以租借电影回家观看
+15，用户登录：包括登录账号：xxx-xxxx和密码，用来借书与还书
+16，用户资料：包括姓名，email和电话号码
